build(ci): make redis available
