# packages/api/models/DepartureCandidate.ts
@@ -39,8 +39,21 @@ export interface DepartureCandidate {
     /**
      * 
      */
-    rideLabel: string;
+    rideLabel?: DepartureCandidateRideLabelEnum | null;
 }
+
+/**
+* @export
+* @enum {string}
+*/
+export enum DepartureCandidateRideLabelEnum {
+    VeryGood = 'very_good',
+    Good = 'good',
+    Fair = 'fair',
+    Poor = 'poor',
+    VeryPoor = 'very_poor'
+}
+
 
 /**
  * Check if a given object implements the DepartureCandidate interface.
@@ -49,7 +62,6 @@ export function instanceOfDepartureCandidate(value: object): value is DepartureC
     if ((!('departureTime' in (value as Record<string, any>)) && !('departure_time' in (value as Record<string, any>))) || ((value as Record<string, any>)['departureTime'] === undefined && (value as Record<string, any>)['departure_time'] === undefined)) return false;
     if ((!('arrivalTime' in (value as Record<string, any>)) && !('arrival_time' in (value as Record<string, any>))) || ((value as Record<string, any>)['arrivalTime'] === undefined && (value as Record<string, any>)['arrival_time'] === undefined)) return false;
     if (!('available' in value) || value['available'] === undefined) return false;
-    if ((!('rideLabel' in (value as Record<string, any>)) && !('ride_label' in (value as Record<string, any>))) || ((value as Record<string, any>)['rideLabel'] === undefined && (value as Record<string, any>)['ride_label'] === undefined)) return false;
     return true;
 }
 
@@ -67,7 +79,7 @@ export function DepartureCandidateFromJSONTyped(json: any, ignoreDiscriminator: 
         'arrivalTime': json['arrival_time'],
         'available': json['available'],
         'rideScore': json['ride_score'] === undefined ? undefined : json['ride_score'] === null ? null : json['ride_score'],
-        'rideLabel': json['ride_label'],
+        'rideLabel': json['ride_label'] === undefined ? undefined : json['ride_label'] === null ? null : json['ride_label'],
     };
 }
 
