# packages/api/models/JourneyStageOut.ts
@@ -42,6 +42,13 @@ import {
     LimitOverrunsOutToJSON,
     LimitOverrunsOutToJSONTyped,
 } from './LimitOverrunsOut';
+import type { JourneyReasonOut } from './JourneyReasonOut';
+import {
+    JourneyReasonOutFromJSON,
+    JourneyReasonOutFromJSONTyped,
+    JourneyReasonOutToJSON,
+    JourneyReasonOutToJSONTyped,
+} from './JourneyReasonOut';
 
 /**
  * 
@@ -124,7 +131,11 @@ export interface JourneyStageOut {
     /**
      * 
      */
-    rideLabel?: string | null;
+    rideLabel?: JourneyStageOutRideLabelEnum | null;
+    /**
+     * 
+     */
+    rideCause?: JourneyStageOutRideCauseEnum | null;
     /**
      * 
      */
@@ -136,8 +147,31 @@ export interface JourneyStageOut {
     /**
      * 
      */
-    reasons?: Array<string>;
+    reasons?: Array<JourneyReasonOut>;
 }
+
+/**
+* @export
+* @enum {string}
+*/
+export enum JourneyStageOutRideLabelEnum {
+    VeryGood = 'very_good',
+    Good = 'good',
+    Fair = 'fair',
+    Poor = 'poor',
+    VeryPoor = 'very_poor'
+}
+/**
+* @export
+* @enum {string}
+*/
+export enum JourneyStageOutRideCauseEnum {
+    Rain = 'rain',
+    Wind = 'wind',
+    Temp = 'temp',
+    Frost = 'frost'
+}
+
 
 /**
  * Check if a given object implements the JourneyStageOut interface.
@@ -180,9 +214,10 @@ export function JourneyStageOutFromJSONTyped(json: any, ignoreDiscriminator: boo
         'departureTime': json['departure_time'] === undefined ? undefined : json['departure_time'] === null ? null : json['departure_time'],
         'rideScore': json['ride_score'] === undefined ? undefined : json['ride_score'] === null ? null : json['ride_score'],
         'rideLabel': json['ride_label'] === undefined ? undefined : json['ride_label'] === null ? null : json['ride_label'],
+        'rideCause': json['ride_cause'] === undefined ? undefined : json['ride_cause'] === null ? null : json['ride_cause'],
         'recommendedDeparture': json['recommended_departure'] === undefined ? undefined : json['recommended_departure'] === null ? null : json['recommended_departure'],
         'recommended': json['recommended'] == null ? undefined : json['recommended'],
-        'reasons': json['reasons'] == null ? undefined : json['reasons'],
+        'reasons': json['reasons'] == null ? undefined : ((json['reasons'] as Array<any>).map(JourneyReasonOutFromJSON)),
     };
 }
 
@@ -216,9 +251,10 @@ export function JourneyStageOutToJSONTyped(value?: JourneyStageOut | null, ignor
         'departure_time': value['departureTime'],
         'ride_score': value['rideScore'],
         'ride_label': value['rideLabel'],
+        'ride_cause': value['rideCause'],
         'recommended_departure': value['recommendedDeparture'],
         'recommended': value['recommended'],
-        'reasons': value['reasons'],
+        'reasons': value['reasons'] == null ? undefined : ((value['reasons'] as Array<any>).map(JourneyReasonOutToJSON)),
     };
 }
 
